--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: '3.7'
 
 services:
+  db:
+    image: postgres:10.1-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
   web:
     build: .
     command: python /code/manage.py runserver 0.0.0.0:8000
@@ -8,3 +12,8 @@ services:
       - .:/code
     ports:
       - 8000:8000
+    depends_on:
+      - db
+
+volumes:
+  postgres_data:
